<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"

    tools:context=".Login">

    <ImageView
        android:id="@+id/image_logo_login"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        app:srcCompat="@drawable/fiteatlogo" />
    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id = "@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ProgressBar>

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:gravity="center"/>
    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login">

    </Button>

    <TextView
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:paddingTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otherloginoption"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/image_googlesignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light" />

</LinearLayout>